feat(add gateway and web)

--- a/Ocelot.Web/appsettings.json
+++ b/Ocelot.Web/appsettings.json
@@ -3,11 +3,16 @@
     "DefaultConnection": "DataSource=app.db"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    }, 
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "Api": {
+    "Host": {
+      "Port": 5200
+    }
+  }
 }
