--- a/Ocelot.Web/Ocelot.Web.csproj
+++ b/Ocelot.Web/Ocelot.Web.csproj
@@ -10,6 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+<!--        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions"-->
+<!--                          Version="3.0.0" />-->
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.9" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.9" />
@@ -40,7 +42,11 @@
       <_ContentIncludedByDefault Remove="Pages\OPd\login.cshtml" />
       <_ContentIncludedByDefault Remove="Pages\OPd\proxy.cshtml" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Ocelot.Gateway\Ocelot.Gateway.csproj" />
+    </ItemGroup>
 
+ 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
         <!-- Ensure Node.js is installed -->
         <Exec Command="node --version" ContinueOnError="true">
